# offshore

./: .gitignore  CMakeLists.txt
assets/shader/: build_shader.sh  debug.glsl  debug.hlsl  shader.cfg  unlit.glsl  unlit.hlsl
assets/shader/hlsl/: debug.hlsl  nuklear.hlsl  shader.cfg  unlit.hlsl
assets/shader/include/: debug.h  debug_main_ps.spirv.h  debug_main_vs.spirv.h  nuklear_main_ps.spirv.h  nuklear_main_vs.spirv.h  unlit.h  unlit_main_ps.spirv.h  unlit_main_vs.spirv.h
nvport/: CMakeLists.txt  VkBootstrap.h  main.cpp
src/: alloc.cpp  alloc.hpp  allocator.cpp  allocator.hpp  components.hpp  container.hpp  defines.hpp  gfx.cpp  gfx.hpp  input.cpp  input.hpp  log.hpp  main.cpp  material.cpp  mesh.hpp  player.cpp  player.hpp  renderable.hpp  shapes.cpp  shapes.hpp  sokol.cpp  stb.cpp  types.hpp  utils.hpp  world.cpp  world.hpp
src/core/: allocator.hpp  container.hpp  geometry.cpp  geometry.hpp  input.cpp  input.hpp  log.hpp  main.cpp  types.hpp
src/gfx/: device.cpp  device.hpp  gfx.cpp  gfx.hpp  material.cpp  material.hpp  nuklear_nvrhi.cpp  nuklear_nvrhi.h  passes.cpp  passes.hpp  renderable.hpp  shapes.cpp  shapes.hpp  sokol.cpp  sokol_impl.c  sokol_impl.h  thirdparty_impl.c  thirdparty_impl.h  ui.cpp  ui.hpp  vertex.hpp  window.cpp  window.hpp
src/systems/: player.cpp  player.hpp  router.cpp  router.hpp  system.hpp  terrain.cpp  terrain.hpp
src/world/: components.hpp  physics.cpp  world.cpp  world.hpp
tools/ShaderMake/: CMakeLists.txt
